# dualfieldmfem

./: .gitmodules  CMakeLists.txt  run.sh
apps/: CMakeLists.txt  MEHC_matrixfree.cpp  Stokes.cpp  dualfieldnavierstokes.cpp  mumpstest.cpp  utils.cpp
data/config/: example.json  example2.json  manufactured.json
include/: BoundaryOperators.h  StokesOperators.h  io.h
scripts/: SimIO.py  manufacture_solution.py  run_convergence.py  test.py
src/: BoundaryOperators.cpp  CMakeLists.txt  dirichlet-conv.cpp
tests/: BoundaryOperatorsTests.cpp  CMakeLists.txt  StokesTests.cpp
